--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-site-2",
   "version": "0.1.0",
-  "homepage": "https://vasu241057.github.io/Portfolio-website/",
+  "homepage": "https://khvasu.in",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
